[package]
name = "async_tasks_state_map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scc = "2.0"
tokio = { version = "1.0", features = ["rt"] }

[dev-dependencies]
fastrand = "2.0"
tokio = { version = "1.0", features = ["time", "rt-multi-thread", "parking_lot"] }
lazy_static = "1.4"
