[package]
name = "async_tasks_state_map"
version = "0.1.2"
edition = "2021"
description = "A struct for recording execution status of async tasks with async methods."
license = "MIT OR Apache-2.0"
keywords = ["async", "tokio", "record", "query", "task"]
categories = ["asynchronous"]
readme = "README.md"
repository = "https://github.com/Ayana-chan/async_tasks_state_map"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scc = "2.0"
tokio = { version = "1.0", features = ["rt"] }

[dev-dependencies]
fastrand = "2.0"
tokio = { version = "1.0", features = ["time", "rt-multi-thread", "parking_lot"] }
lazy_static = "1.4"
